--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "api"]
 	path = api
 	url = https://islandjoe@github.com/islandjoe/callstats-dashboard-api
+[submodule "app"]
+	path = app
+	url = https://islandjoe@github.com/islandjoe/callstats-dashboard-app
